# Oir

./: Cargo.toml
oir/: Cargo.toml
oir/src/: actor.rs  anybox.rs  gensym.rs  mailbox.rs  main.rs  message_handler.rs  request_handler.rs  supervisor.rs
oir/src/examples/: pool.rs
report/: .gitignore  report.bib  report.tex
