[package]
name = "oir"
version = "0.1.0"
authors = ["Marco A. Persson <bfr555@alumni.ku.dk>"
          ,"Andreas Nicolaisen <jtc303@alumni.ku.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["rt-multi-thread", "io-std", "time", "macros", "sync"] }
