[package]
name = "oir"
version = "0.1.0"
authors = ["Marco A. Persson <bfr555@alumni.ku.dk>"
          ,"Andreas Nicolaisen <jtc303@alumni.ku.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tokio = { version = "0.3", features = ["rt-multi-thread", "io-std", "time", "macros", "sync"] }
async-trait = "0.1.41"
uuid = { version = "0.8.1", features = ["v4"] }
lazy_static = "1.4.0"